sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:6: error: not found: value min
      if (getValeur(j)<min){
                       ^AlgSelectionSort:10: error: not found: value j
    echange(i,j)
              ^